# bazel-qt-example

./: MODULE.bazel
labs/basics/task1/: BUILD  main.cpp  mainwindow.cpp  mainwindow.h
labs/basics/task2/: BUILD.bazel  mainwindow.cpp  mainwindow.h  readme.
labs/graphics/: BUILD.bazel  canvas.cpp  canvas.h  controller.cpp  controller.h  mainwindow.h  polygon.cpp  polygon.h  ray.cpp  ray.h
labs/lab3/: BUILD.bazel  exercise_data.h  level_dialog.cpp  level_dialog.h  mainwindow.cpp  mainwindow.h
