load("@rules_qt//:qt.bzl", "qt_cc_binary", "qt_cc_library")
load("@rules_qt//:qt.bzl", "qt_cc_binary")

qt_cc_binary(
    name = "graphics",
    srcs = [
        "main.cpp",
        "mainwindow.h",
        "canvas.h",
        "canvas.cpp",
        "ray.h",
        "ray.cpp",
        "polygon.h",
        "polygon.cpp",
        "controller.h",
        "controller.cpp",
    ],
    deps = [
        "@rules_qt//:qt_widgets",
        "@rules_qt//:qt_gui",
        "@rules_qt//:qt_core",
    ],
)
