load("@rules_qt//:qt.bzl", "qt_cc_binary", "qt_cc_library")
load("@rules_qt//:qt.bzl", "qt_cc_binary")

qt_cc_binary(
    name = "lab3",
    srcs = [
        "main.cpp",
        "mainwindow.h",
        "mainwindow.cpp",
        "level_dialog.h",
        "level_dialog.cpp",
        "exercise_data.h",
    ],
    data = [
        "success.wav",
        "error.wav",
    ],
    deps = [
        "@rules_qt//:qt_widgets",
        "@rules_qt//:qt_multimedia",
        "@rules_qt//:qt_gui",
        "@rules_qt//:qt_core",
    ],
)
