load("@rules_qt//:qt.bzl", "qt_cc_binary", "qt_cc_library")
load("@rules_qt//:qt.bzl", "qt_cc_binary")

qt_cc_binary(
    name = "task2",
    srcs = [
        "main.cpp",
        "mainwindow.cpp",
        "mainwindow.h",
    ],
    deps = [
        "@rules_qt//:qt_widgets",
        "@rules_qt//:qt_gui",
        "@rules_qt//:qt_core",
    ],
)
